# QuickTranslate

./: .gitignore  CMakeLists.txt  LanguageBox.qml  QuickTranslate.pro  QuickTranslate2.pro  README.md  StyledTextItem.qml  googletranslator.cpp  googletranslator.h  imainview.h  main.cpp  main.qml  mainpresenter.cpp  mainpresenter.h  mainview.cpp  mainview.h
src/app/: CMakeLists.txt  LanguageBox.qml  SimpleButton.qml  StyledTextEditItem.qml  TranslateTextRect.qml  cursorposprovider.h  googletranslator.cpp  googletranslator.h  imainview.h  langslistmodel.cpp  langslistmodel.h  languageslist.cpp  languageslist.h  main.cpp  main.qml  mainpresenter.cpp  mainpresenter.h  mainview.cpp  mainview.h  qml.qrc  translatorworker.cpp  translatorworker.h
src/app/qml/: FullLayoutItem.qml  LanguageBox.qml  OnlyTranslatedTextWindow.qml  SeparatingStrip.qml  StyledTextEditItem.qml  StyledTextItem.qml  TranslateTextRect.qml  TranslatedTextItem.qml  WelcomeButtonItem.qml  WelcomeWindow.qml  main (copy).qml  main.qml
src/libc-googletrans/: CMakeLists.txt  main.cpp  main.py  pyhelper.hpp  translator.cpp  translator.h
tests/: CMakeLists.txt  gtest_dependency.pri  main.cpp  tests.pro  tst_translatorstests.cpp  tst_translatorstests.h
